--- a/docs/Makefile
+++ b/docs/Makefile
@@ -18,3 +18,5 @@ help:
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+	mkdir -p $(BUILDDIR)/html/_images
+	cp ../ellie/figures/logo.gif $(BUILDDIR)/html/_images/logo.gif
