--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ script:
     - echo "Run tests here."
 
 after_success:
-    - if [ "$TRAVIS_BRANCH" = "rodluger-master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then source .ci/build-docs.sh; fi
+    - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then source .ci/build-docs.sh; fi
