--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,31 @@ language: python
 matrix:
     include:
         - os: linux
-          env: PYTHON_VERSION=3.6 NUMPY_VERSION=1.12
+        - python: 3.6
+
+cache: pip
+
+before_install:
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda2/bin:$PATH
+  - conda update --yes conda
 
 install:
-    - source .ci/conda.sh
-    - python setup.py install
-
-cache:
-    directories:
-        - $HOME/miniconda
+  - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
+  - source activate test
+  - conda install --yes numpy scipy matplotlib nose pip
+  - pip install lightkurve
+  - pip install tensorflow
+  - pip install astropy
+  - pip install astroquery
+  - pip install tqdm
+  - pip install fitsio
+  - python setup.py install
 
 script:
-    - echo "Run tests here."
+  - nosetests -w tests
 
 after_success:
     - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then source .ci/build-docs.sh; fi
