--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ install:
   - pip install astroquery
   - pip install tqdm
   - pip install fitsio
+  - pip install requests
   - python setup.py install
 
 script:
