--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ sudo: false
 dist: trusty
 
 language: python
+python: 3.6
 
 matrix:
     include:
         - os: linux
-        - python: 3.6
 
 cache: pip
 
@@ -28,6 +28,7 @@ install:
   - pip install astroquery
   - pip install tqdm
   - pip install fitsio
+  - pip install cython
   - pip install requests
   - python setup.py install
 
