--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
   - python setup.py install
 
 script:
-  - python setup.py develop
+  - python3 setup.py develop
   - pytest eleanor/testing.py
 
 after_success:
