--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: false
-
 dist: trusty
 
 language: python
@@ -29,7 +27,7 @@ install:
   - pip install tqdm
   - pip install fitsio
   - pip install cython
-  - pip install requests
+  - sudo pip3 install requests
   - python setup.py install
 
 script:
