--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
   - pip install astroquery
   - pip install tqdm
   - pip install fitsio
+  - pip install sphinx
   - pip install cython
   - python setup.py install
 
