--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
   - pip install tqdm
   - pip install fitsio
   - pip install sphinx
+  - pip install nbsphinx
   - pip install cython
   - python setup.py install
 
