--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python: 3.6
 matrix:
     include:
         - os: linux
-        
+
 addons:
   apt_packages:
     - pandoc
@@ -27,6 +27,7 @@ install:
   - pip install sphinx
   - pip install nbsphinx
   - pip install cython
+  - pip install codecov
   - python setup.py install
 
 script:
@@ -34,4 +35,5 @@ script:
   - echo "skipping tests"
 
 after_success:
-    - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then source .ci/build-docs.sh; fi
+  - codecov
+  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then source .ci/build-docs.sh; fi
