--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ install:
   - pip install nbsphinx
   - pip install cython
   - pip install codecov
+  - pip install coverage
   - python setup.py install
 
 script:
@@ -36,5 +37,4 @@ script:
 
 after_success:
   - codecov
-  - bash < (curl -s https://codecov.io/bash) -t d423a258-e122-4865-82b8-b5e65bd1f5d8
   - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then source .ci/build-docs.sh; fi
