--- a/codecov.yml
+++ b/codecov.yml
@@ -1,2 +1,9 @@
 codecov:
   token: d423a258-e122-4865-82b8-b5e65bd1f5d8
+comment:
+  layout: "reach, diff, flags, files"
+  behavior: default
+  require_changes: false  # if true: only post the comment if coverage changes
+  require_base: no        # [yes :: must have a base report to post]
+  require_head: yes       # [yes :: must have a head report to post]
+  branches: null
