--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ install:
 
 script:
   - python setup.py develop
-  - pytest eleanor/tests/*
-  - codecov
+  - pytest eleanor/tests/* --cov=./
 
 after_success:
+  - codecov
   - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then source .ci/build-docs.sh; fi
