--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,12 @@ install:
   - pip install cython
   - pip install codecov
   - pip install coverage
+  - pip install pytest-cov
   - python setup.py install
 
 script:
   - python setup.py develop
-  - pytest eleanor/tests/* --cov=./
+  - pytest eleanor/tests/* --cov=eleanor
 
 after_success:
   - codecov
