--- a/setup.cfg
+++ b/setup.cfg
@@ -5,4 +5,4 @@ universal=1
 test=pytest
 
 [tool:pytest]
-addopts = -x --doctest-modules --ignore=setup.py
+addopts = -x --doctest-modules --ignore=setup.py --cov=eleanor
