--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
   - sudo pip3 install requests
 
 install:
+  - pip install tornado==5.1.1
   - pip install lightkurve
   - pip install tensorflow
   - pip install astropy
