travis, y u no eat soup

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ install:
   - pip install pytest
   - pip install pytest-cov
   - pip install beautifulsoup4>=4.6.0
+  - pip install lxml
   - python setup.py install
 
 script:
