--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ install:
   - pip install pytest-cov
   - pip install beautifulsoup4>=4.6.0
   - pip install lxml
+  - pip install tess-point
   - python setup.py install
 
 script:
