--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
   - pip install coverage
   - pip install pytest
   - pip install pytest-cov
+  - pip install tess-point
   - python setup.py install
 
 script:
