--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ install:
   - pip install beautifulsoup4>=4.6.0
   - pip install lxml
   - pip install tess-point
+  - pip install pybind11
   - python setup.py install
 
 script:
