--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ install:
   - pip install lxml
   - pip install tess-point
   - pip install pybind11
+  - pip install torch
   - python setup.py install
 
 script:
