--- a/setup.cfg
+++ b/setup.cfg
@@ -4,5 +4,8 @@ universal=1
 [aliases]
 test=pytest
 
-[tool:pytest]
-addopts = -x --doctest-modules --ignore=setup.py --cov=eleanor
+[dev-packages]
+pytest="*"
+
+[scripts]
+test="pytest"
